# aws-docs-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: sources.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  DEMO.md  PROJECT.md
infra/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/modules/app_runner/: main.tf  outputs.tf  variables.tf
infra/modules/cdn/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/ecs_alb/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: smoke_test.py
src/aws_docs_agent/: cli.py  config.py
src/aws_docs_agent/agent/: graph.py  prompts.py  tools.py
src/aws_docs_agent/bedrock/: client.py
src/aws_docs_agent/rag/: chunker.py  ingest.py  retriever.py
src/aws_docs_agent/ui/: streamlit_app.py
tests/: test_chunker.py  test_retriever.py  test_tools.py
